ENH: qSlicer***Volumes are QObjects they need the macro Q_OBJECT
In order to have the meta system correctly working with QObjects, each
class need to declare the macro Q_OBJECT, it allows to know the final class
name of a QObject* (using QObject::metaObject()->className()).
Here it's important to know what module didn't reimplement the virtual
functions helpText() and acknowledgmentText().

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13853 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Measurements/CMakeLists.txt
+++ b/QTModules/Measurements/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(qt_module_SRCS
 
 # Headers that should run through moc
 SET(qt_module_MOC_SRCS
+  qSlicerMeasurementsModule.h
   qSlicerMeasurementsModuleWidget.h
   Widgets/qSlicerMeasurementsAngleWidget.h
   Widgets/qSlicerMeasurementsRulerWidget.h
