--- a/QTModules/ModuleTemplate/CMakeLists.txt
+++ b/QTModules/ModuleTemplate/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(qt_module_SRCS
 
 # Headers that should run through moc
 SET(qt_module_MOC_SRCS
+  qSlicerModuleTemplateModule.h
   qSlicerModuleTemplateModuleWidget.h
   )
 
