--- a/SuperBuild/NUMPY_configure_step.cmake.in
+++ b/SuperBuild/NUMPY_configure_step.cmake.in
@@ -10,12 +10,20 @@ if(WIN32)
   set(path_sep ";")
 endif()
 
+# As explained in site.cfg.example, the library name without the prefix "lib" should be used.
+# Nevertheless, on windows, only "libf2c" leads to a successful configuration and 
+# installation of NUMPY
+set(f2c_libname "f2c")
+if(WIN32)
+  set(f2c_libname "libf2c")
+endif()
+
 # setup the site.cfg file
 file(WRITE "@NUMPY_binary@/site.cfg"
 "
 [blas]
 library_dirs = @CLAPACK_binary@/BLAS/SRC/${CONFIG_TYPE}/${path_sep}@CLAPACK_binary@/F2CLIBS/libf2c/${CONFIG_TYPE}/
-libraries = blas,libf2c
+libraries = blas,${f2c_libname}
 
 [lapack]
 library_dirs = @CLAPACK_binary@/SRC/${CONFIG_TYPE}/
