ENH: add a simple test for numpy as an extra check if numpy built and installed correctly.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13857 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/GUI/Python/Testing/CMakeLists.txt
+++ b/Base/GUI/Python/Testing/CMakeLists.txt
@@ -1,4 +1,7 @@
 # --------------------------------------------------------------------------
 # Testing
-
 ADD_TEST(Slicer3PythonTest ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Base/GUI/Python/Testing/SimpleTest.py)
+
+IF(Slicer3_USE_NUMPY)
+  ADD_TEST(Slicer3PythonSimpleNUMPYTest ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Base/GUI/Python/Testing/SimpleNUMPYTest.py)
+ENDIF(Slicer3_USE_NUMPY)
