BUG: When Slicer is installed, CTK_QT_PLUGIN_PATH is never set. Remove the error but I doubt it fixes all the pbs.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13858 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -283,7 +283,8 @@ proc launch_SetEnvironment {} {
       # QtDesigner variable
       #
       set ::env(Slicer3_QT_PLUGIN_PATH)  "@Slicer3_INSTALL_LIB_DIR@"
-    
+      set ::env(CTK_QT_PLUGIN_PATH) "$::env(CTK_BIN_DIR)"
+      
     } else {
     
       # the not-installed case
