ENH: models display manager: first cut
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13859 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -40,6 +40,14 @@ SET(KIT_SRCS
   qSlicerSaveDataDialog.h
   qSlicerWidget.cxx
   qSlicerWidget.h
+  vtkSlicerModelDisplayManager.cxx
+  vtkSlicerModelDisplayManager.h
+  vtkSlicerBoxRepresentation.cxx
+  vtkSlicerBoxRepresentation.h
+  vtkSlicerBoxWidget2.cxx
+  vtkSlicerBoxWidget2.h
+  vtkSlicerManagerInteractorStyle.h
+  vtkSlicerManagerInteractorStyle.cxx
   )
 
 # Headers that should run through moc
