ENH: Added qMRMLWidget class
Base class for all qMRMLWidget objects that should have the methods
mrmlScene/setMRMLScene

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13867 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -63,6 +63,8 @@ SET(qMRMLWidgets_SRCS
   qMRMLUtils.h
   qMRMLVolumeThresholdWidget.cxx
   qMRMLVolumeThresholdWidget.h
+  qMRMLWidget.cxx
+  qMRMLWidget.h
   qMRMLWindowLevelWidget.cxx
   qMRMLWindowLevelWidget.h
   )
@@ -87,6 +89,7 @@ SET(qMRMLWidgets_MOC_SRCS
   qMRMLTransformSliders.h
   qMRMLTreeWidget.h
   qMRMLVolumeThresholdWidget.h
+  qMRMLWidget.h
   qMRMLWindowLevelWidget.h
   )
 
