ENH: Added class qMRMLThreeDRenderView and its corresponding QtDesigner plugin
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13879 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -53,6 +53,9 @@ SET(qMRMLWidgets_SRCS
   qMRMLSliceViewWidget_p.h
   qMRMLSortFilterProxyModel.cxx
   qMRMLSortFilterProxyModel.h
+  qMRMLThreeDRenderView.cxx
+  qMRMLThreeDRenderView.h
+  qMRMLThreeDRenderView_p.h
   qMRMLTransformProxyModel.cxx
   qMRMLTransformProxyModel.h
   qMRMLTransformSliders.cxx
@@ -90,6 +93,8 @@ SET(qMRMLWidgets_MOC_SRCS
   qMRMLSliceViewWidget.h
   qMRMLSliceViewWidget_p.h
   qMRMLSortFilterProxyModel.h
+  qMRMLThreeDRenderView.h
+  qMRMLThreeDRenderView_p.h
   qMRMLTransformProxyModel.h
   qMRMLTreeProxyModel.h
   qMRMLTreeProxyModel_p.h
