ENH: Added class qSlicerSliceViewWidget
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13884 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -38,6 +38,9 @@ SET(KIT_SRCS
   qSlicerModuleSelectorWidget.h
   qSlicerSaveDataDialog.cxx
   qSlicerSaveDataDialog.h
+  qSlicerSliceViewWidget.cxx
+  qSlicerSliceViewWidget.h
+  qSlicerSliceViewWidget_p.h
   qSlicerWidget.cxx
   qSlicerWidget.h
   vtkSlicerModelDisplayManager.cxx
@@ -65,6 +68,8 @@ SET(KIT_MOC_SRCS
   qSlicerModuleSelectorWidget_p.h
   qSlicerSaveDataDialog.h
   qSlicerSaveDataDialog_p.h
+  qSlicerSliceViewWidget.h
+  qSlicerSliceViewWidget_p.h
   qSlicerWidget.h
   )
   
