ENH: Added qSlicerLayoutManager - Allow to switch between the different Views (ConventionalView, OneUpGreenSliceView, DualView, ...)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13885 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -32,6 +32,9 @@ SET(KIT_SRCS
   qSlicerIOManager.h
   qSlicerIOOptionsWidget.cxx
   qSlicerIOOptionsWidget.h
+  qSlicerLayoutManager.cxx
+  qSlicerLayoutManager.h
+  qSlicerLayoutManager_p.h
   qSlicerModulePanel.cxx
   qSlicerModulePanel.h
   qSlicerModuleSelectorWidget.cxx
@@ -63,6 +66,8 @@ SET(KIT_MOC_SRCS
   qSlicerFileDialog.h
   qSlicerIOManager.h
   qSlicerIOOptionsWidget.h
+  qSlicerLayoutManager.h
+  qSlicerLayoutManager_p.h
   qSlicerModulePanel.h
   qSlicerModuleSelectorWidget.h
   qSlicerModuleSelectorWidget_p.h
