COMP: Superbuild - Pass Subversion_SVN_EXECUTABLE variable to Slicer3 inner project
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13894 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -440,6 +440,7 @@ ExternalProject_Add(${proj}
     -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
     -DBUILD_EXAMPLES:BOOL=OFF
     -DBUILD_TESTING:BOOL=ON
+    -DSubversion_SVN_EXECUTABLE:FILEPATH=${Subversion_SVN_EXECUTABLE}
     # ITK
     -DITK_DIR:PATH=${ITK_DIR}
     # Teem
