COMP: CMakeLists.txt / downloadFile - Review the condition used to check if download should re-attempt.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13896 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,9 @@ MACRO(downloadFile url dest)
     ENDIF()
   ELSE()
     # Make sure the file is not empty
-    FILE(READ ${dest} dest_content)
-    IF(dest_content STREQUAL "")
+    FILE(READ ${dest} dest_content LIMIT 4)
+    STRING(LENGTH "${dest_content}" dest_length)
+    IF(NOT "${dest_length}" EQUAL 4)
       FILE(REMOVE ${dest})
       downloadFile(${url} ${dest})
     ENDIF()
