ENH: A small reorganization to allow this to be built outside of Slicer3.  There is still a little CMake work that could be done so that it can build completely by itself.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13906 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DiffusionApplications/CMakeLists.txt
+++ b/Applications/CLI/DiffusionApplications/CMakeLists.txt
@@ -1,4 +1,7 @@
 PROJECT( DiffusionFiltering )
+cmake_minimum_required(VERSION 2.8)
+
+INCLUDE_DIRECTORIES(${DiffusionFiltering_SOURCE_DIR}/DiffusionApplicationsCommon)
 
 SET(filters
   jointLMMSE
