--- a/Applications/CLI/DiffusionApplications/ResampleDTI/CMakeLists.txt
+++ b/Applications/CLI/DiffusionApplications/ResampleDTI/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(ResampleDTI) 
+project(ResampleDTI)
 
 find_package(GenerateCLP REQUIRED)
 if(GenerateCLP_FOUND)
@@ -10,9 +10,12 @@ include(${ITK_USE_FILE})
 
 
 set (CLP ResampleDTI )
+if (Slicer3_SOURCE_DIR)
+   SET(LOGOFILE ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
+endif (Slicer3_SOURCE_DIR)
 
 set ( ${CLP}_SOURCE ${CLP}.cxx )
-generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
+generateclp(${CLP}_SOURCE ${CLP}.xml ${LOGOFILE})
 
 Set( dtiProcessFiles
 dtiprocessFiles/deformationfieldio.h
@@ -22,24 +25,28 @@ dtiprocessFiles/itkHFieldToDeformationFieldImageFilter.txx
 )
 
 add_library(${CLP}Lib SHARED ${${CLP}_SOURCE} ${dtiProcessFiles} )
-slicer3_set_plugins_output_path(${CLP}Lib)
+if(Slicer3_SOURCE_DIR)
+  slicer3_set_plugins_output_path(${CLP}Lib)
+endif(Slicer3_SOURCE_DIR)
 set_target_properties (${CLP}Lib PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
 target_link_libraries (${CLP}Lib
   ModuleDescriptionParser
   ITKIO
-  ITKAlgorithms 
+  ITKAlgorithms
   ITKBasicFilters
 )
 
-add_executable(${CLP} ${CLI_SOURCE_DIR}/Templates/CommandLineSharedLibraryWrapper.cxx)
-slicer3_set_plugins_output_path(${CLP})
+add_executable(${CLP} ResampleDTIApp.cxx)
+if(Slicer3_SOURCE_DIR)
+  slicer3_set_plugins_output_path(${CLP})
+endif(Slicer3_SOURCE_DIR)
 target_link_libraries (${CLP} ${CLP}Lib)
 
 if (Slicer3_SOURCE_DIR)
-  # install each target in the production area (where it would appear in an 
-  # installation) and install each target in the developer area (for running 
+  # install each target in the production area (where it would appear in an
+  # installation) and install each target in the developer area (for running
   # from a build)
-  set(TARGETS        
+  set(TARGETS
     ${CLP}
     ${CLP}Lib
     )
