ENH: Add option to control the protocol (http or git) use by git.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13923 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -84,8 +84,14 @@ ENDFUNCTION()
 # Prerequisites
 #------------------------------------------------------------------------------
 
-set(git_repo http://github.com/commontk/CTK/raw/master/)
+option(Slicer3_USE_GIT_PROTOCOL "If behind a firewall turn this off to use http instead." ON)
 
+set(git_protocol "git")
+if(NOT Slicer3_USE_GIT_PROTOCOL)
+  set(git_protocol "http")
+endif()
+
+set(git_repo http://github.com/commontk/CTK/raw/master/)
 set(file CMake/ExternalProject.cmake)
 downloadFile(${git_repo}/${file} ${CMAKE_BINARY_DIR}/${file})
 
