ENH: Use the launcher to call the python interpreter so that the paths are set properly.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13943 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -1,4 +1,4 @@
 
 IF(Slicer3_USE_NUMPY)
-  ADD_TEST(Slicer3PythonSimpleNUMPYTest ${PYTHON_EXECUTABLE} ${Slicer3_SOURCE_DIR}/Testing/SimpleNUMPYTest.py)
+  ADD_TEST(Slicer3PythonSimpleNUMPYTest ${Slicer3_BINARY_DIR}/Slicer3 --launch ${PYTHON_EXECUTABLE} ${Slicer3_SOURCE_DIR}/Testing/SimpleNUMPYTest.py)
 ENDIF(Slicer3_USE_NUMPY)
