ENH: Created directory structure supporting new libraries MRMLLogic and MRMLDisplayableManager
The dependency graph looks like:

              |----------<---- SlicerBaseLogic
              |
MRML ----- MRMLLogic ---- MRMLDisplayableManager
                            |
                            |-------< ----- SlicerBaseGUI
                            |
                            |-------< ----- SlicerBaseQTGUI

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13945 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/SlicerQT/CMakeLists.txt
+++ b/Applications/SlicerQT/CMakeLists.txt
@@ -100,6 +100,8 @@ IF(BUILD_SHARED_LIBS)
        \"../lib/MGHImageIO\",                                       \\
        \"../lib/MRML\",                                             \\
        \"../lib/MRMLCLI\",                                          \\
+       \"../lib/MRMLLogic\",                                        \\
+       \"../lib/MRMLDisplayableManager\",                           \\
        \"../lib/ModuleDescriptionParser\",                          \\
        \"../lib/MRMLIDImageIO\",                                    \\
        \"../lib/Qdec\",                                             \\
