--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -253,7 +253,9 @@ proc launch_SetEnvironment {} {
       set ::env(MGHImageIO_DIR)     $::env(Slicer3_HOME)/lib/MGHImageIO
       set ::env(MRML_DIR)           $::env(Slicer3_HOME)/lib/MRML
       set ::env(MRMLCLI_DIR)        $::env(Slicer3_HOME)/lib/MRMLCLI
-      set ::env(ModuleDescriptionParser_DIR)        $::env(Slicer3_HOME)/lib/ModuleDescriptionParser
+      set ::env(MRMLLogic_DIR)      $::env(Slicer3_HOME)/lib/MRMLLogic
+      set ::env(MRMLDisplayableManager_DIR)   $::env(Slicer3_HOME)/lib/MRMLDisplayableManager
+      set ::env(ModuleDescriptionParser_DIR)  $::env(Slicer3_HOME)/lib/ModuleDescriptionParser
       set ::env(MRMLIDImageIO_DIR)  $::env(Slicer3_HOME)/lib/MRMLIDImageIO
       set ::env(Qdec_DIR)           $::env(Slicer3_HOME)/lib/Qdec
       set ::env(RemoteIO_DIR)       $::env(Slicer3_HOME)/lib/RemoteIO
@@ -411,7 +413,9 @@ proc launch_SetEnvironment {} {
       set ::env(MGHImageIO_DIR)     [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(MRML_DIR)           [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(MRMLCLI_DIR)        [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
-      set ::env(ModuleDescriptionParser_DIR)        [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
+      set ::env(MRMLLogic_DIR)      [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
+      set ::env(MRMLDisplayableManager_DIR)      [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
+      set ::env(ModuleDescriptionParser_DIR)     [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(MRMLIDImageIO_DIR)  [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(Qdec_DIR)           [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
       set ::env(RemoteIO_DIR)       [file normalize "$::Slicer3_HOME/lib/$::BUILD_SUBDIR"]
@@ -594,6 +598,8 @@ proc launch_SetPaths {} {
             set ::env(LD_LIBRARY_PATH) $::env(MGHImageIO_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(MRML_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(MRMLCLI_DIR):$::env(LD_LIBRARY_PATH)
+            set ::env(LD_LIBRARY_PATH) $::env(MRMLLogic_DIR):$::env(LD_LIBRARY_PATH)
+            set ::env(LD_LIBRARY_PATH) $::env(MRMLDisplayableManager_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(ModuleDescriptionParser_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(MRMLIDImageIO_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(Qdec_DIR):$::env(LD_LIBRARY_PATH)
@@ -645,6 +651,8 @@ proc launch_SetPaths {} {
             set ::env(DYLD_LIBRARY_PATH) $::env(MGHImageIO_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(MRML_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(MRMLCLI_DIR):$::env(DYLD_LIBRARY_PATH)
+            set ::env(DYLD_LIBRARY_PATH) $::env(MRMLLogic_DIR):$::env(DYLD_LIBRARY_PATH)
+            set ::env(DYLD_LIBRARY_PATH) $::env(MRMLDisplayableManager_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(ModuleDescriptionParser_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(MRMLIDImageIO_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(Qdec_DIR):$::env(DYLD_LIBRARY_PATH)
@@ -693,6 +701,8 @@ proc launch_SetPaths {} {
             set ::env(Path) $::env(MGHImageIO_DIR)\;$::env(Path)
             set ::env(Path) $::env(MRML_DIR)\;$::env(Path)
             set ::env(Path) $::env(MRMLCLI_DIR)\;$::env(Path)
+            set ::env(Path) $::env(MRMLLogic_DIR)\;$::env(Path)
+            set ::env(Path) $::env(MRMLDisplayableManager_DIR)\;$::env(Path)
             set ::env(Path) $::env(ModuleDescriptionParser_DIR)\;$::env(Path)
             set ::env(Path) $::env(MRMLIDImageIO_DIR)\;$::env(Path)
             set ::env(Path) $::env(Qdec_DIR)\;$::env(Path)
