--- a/Libs/MRMLLogic/Testing/Cxx/CMakeLists.txt
+++ b/Libs/MRMLLogic/Testing/Cxx/CMakeLists.txt
@@ -1,4 +1,4 @@
-SET(KIT BaseLogic)
+SET(KIT MRMLLogic)
 
 SET( KIT_TESTS ${CXX_TEST_PATH}/${KIT}CxxTests)
 
@@ -12,8 +12,7 @@ ENDMACRO( SIMPLE_TEST  )
 
 SET(CMAKE_TESTDRIVER_BEFORE_TESTMAIN "DEBUG_LEAKS_ENABLE_EXIT_ERROR();" )
 CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
-  vtkDataIOManagerLogicTest1.cxx
-  vtkSlicerTransformLogicTest1.cxx
+  vtkMRMLSliceLogicTest1.cxx
   EXTRA_INCLUDE TestingMacros.h
 )
 
@@ -24,8 +23,5 @@ SET(LIBRARY_NAME ${PROJECT_NAME})
 ADD_EXECUTABLE(${KIT}CxxTests ${Tests})
 TARGET_LINK_LIBRARIES(${KIT}CxxTests ${lib_name})
 
-SIMPLE_TEST( vtkDataIOManagerLogicTest1 )
-ADD_TEST( vtkSlicerTransformLogicTest1 ${LAUNCH_EXE}
-  ${KIT_TESTS} vtkSlicerTransformLogicTest1
-  ${CMAKE_CURRENT_SOURCE_DIR}/affineTransform.txt
-  )
+
+SIMPLE_TEST( vtkMRMLSliceLogicTest1 )
