--- a/Base/GUI/CMakeLists.txt
+++ b/Base/GUI/CMakeLists.txt
@@ -25,6 +25,8 @@ set(include_dirs
   ${qMRMLWidgets_BINARY_DIR}
   ${MRML_SOURCE_DIR}
   ${MRML_BINARY_DIR}
+  ${MRMLLogic_SOURCE_DIR}
+  ${MRMLLogic_BINARY_DIR}
   ${MRMLDisplayableManager_SOURCE_DIR}
   ${MRMLDisplayableManager_BINARY_DIR}
   ${ModuleDescriptionParser_SOURCE_DIR}
