--- a/QTModules/CMakeLists.txt
+++ b/QTModules/CMakeLists.txt
@@ -17,7 +17,7 @@ ENDIF(NOT Slicer3_SOURCE_DIR)
 INCLUDE(${Slicer3_CMAKE_DIR}/Slicer3QTModuleMacros.cmake)
 
 SET(qtmodules
-  #Annotation
+  Annotation
   SlicerWelcome
   Volumes
   Measurements
