--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-IF(Slicer3_USE_NUMPY)
+IF(Slicer3_USE_NUMPY AND PYTHON_EXECUTABLE)
   ADD_TEST(Slicer3PythonSimpleNUMPYTest ${Slicer3_BINARY_DIR}/Slicer3 --launch ${PYTHON_EXECUTABLE} ${Slicer3_SOURCE_DIR}/Testing/SimpleNUMPYTest.py)
-ENDIF(Slicer3_USE_NUMPY)
+ENDIF(Slicer3_USE_NUMPY AND PYTHON_EXECUTABLE)
