ENH: added MRML Displayable Manager  and Logic classes
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13978 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLLogic/CMakeLists.txt
+++ b/Libs/MRMLLogic/CMakeLists.txt
@@ -58,6 +58,7 @@ INSTALL(FILES
 
 SET(MRMLLogic_SRCS
   vtkMRMLAbstractLogic.cxx
+  vtkMRMLModelHierarchyLogic.cxx
   vtkMRMLSliceLayerLogic.cxx
   vtkMRMLSliceLogic.cxx
   # slicer's vtk extensions (filters)
