--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -60,6 +60,14 @@ INSTALL(FILES
 SET(MRMLDisplayableManager_SRCS
   vtkMRMLAbstractDisplayableManager.cxx
   vtkMRMLDisplayableManagerFactory.cxx
+  vtkMRMLModelDisplayableManager.h
+  vtkMRMLModelDisplayableManager.cxx
+  vtkDisplayableManagerBoxRepresentation.cxx
+  vtkDisplayableManagerBoxRepresentation.h
+  vtkDisplayableManagerBoxWidget2.cxx
+  vtkDisplayableManagerBoxWidget2.h
+  vtkDisplayableManagerInteractorStyle.h
+  vtkDisplayableManagerInteractorStyle.cxx
   )
 
 # TCL Wrapping
