ENH: Merge qSlicerMRMLSliceViewWidget and qMRMLSliceViewWidget classes
Since SlicerSliceLogic and SlicerSliceLayerLogic have been moved to MRMLLogic,
qMRMLWidgets library now depends on MRMLLogic

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13979 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -120,6 +120,8 @@ QT4_ADD_RESOURCES(qMRMLWidgets_QRC_SRCS Resources/qMRMLWidgets.qrc)
 SET(include_dirs
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
+  ${MRMLLogic_SOURCE_DIR}
+  ${MRMLLogic_BINARY_DIR}
   )
 
 SET(QT_INCLUDE_DIRS
@@ -174,6 +176,7 @@ SET(qMRMLWidgets_LIBRARIES
   ${CTK_LIBRARIES}
   ${CTK_EXTERNAL_LIBRARIES}
   MRML
+  MRMLLogic
   )
 
 TARGET_LINK_LIBRARIES(${lib_name} ${qMRMLWidgets_LIBRARIES})
