COMP:correct OpenIGTLink_DIR defined in launch.tcl.in
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13989 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -234,8 +234,8 @@ proc launch_SetEnvironment {} {
         set ::env(PYTHON_DIR)         $::env(Slicer3_HOME)/lib/Python
       }
     
-      set ::env(OpenIGTLink_DIR)      $::env(Slicer3_HOME)/lib/OpenIGTLink
-      set ::env(OpenIGTLink_LIB_DIR)  $::env(Slicer3_HOME)/lib/OpenIGTLink
+      set ::env(OpenIGTLink_DIR)      $::env(Slicer3_HOME)/lib/igtl
+      set ::env(OpenIGTLink_LIB_DIR)  $::env(Slicer3_HOME)/lib/igtl
       set ::env(OpenIGTLink_BIN_DIR)  $::env(Slicer3_HOME)/bin
     
       set ::env(BatchMake_DIR)      $::env(Slicer3_HOME)/lib/BatchMake
