ENH: Added CameraDisplayableManager
That manager is in charge of observing the scene and should make sure
its associated MRMLViewNode is properly associated with a vtkCameraNode

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13994 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -59,6 +59,7 @@ INSTALL(FILES
 
 SET(MRMLDisplayableManager_SRCS
   vtkMRMLAbstractDisplayableManager.cxx
+  vtkMRMLCameraDisplayableManager.cxx
   vtkMRMLDisplayableManagerFactory.cxx
   vtkMRMLModelDisplayableManager.cxx
   
