ENH: Added vtkMRMLViewDisplayableManager
This manager is in charge of observing its associated MRMLViewNode.
Also in charge of displaying the AxisBox
and observing the CameraDisplayableManager associated with its factory
to react properly when the active camera changes.
See vtkMRMLCameraDisplayableManager::ActiveCameraChangedEvent

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13995 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -62,6 +62,7 @@ SET(MRMLDisplayableManager_SRCS
   vtkMRMLCameraDisplayableManager.cxx
   vtkMRMLDisplayableManagerFactory.cxx
   vtkMRMLModelDisplayableManager.cxx
+  vtkMRMLViewDisplayableManager.cxx
   
   vtkDisplayableManagerInteractorStyle.cxx
   vtkDisplayableManagerBoxWidget2.cxx
