--- a/Libs/MRMLLogic/CMakeLists.txt
+++ b/Libs/MRMLLogic/CMakeLists.txt
@@ -58,6 +58,7 @@ INSTALL(FILES
 
 SET(MRMLLogic_SRCS
   vtkMRMLAbstractLogic.cxx
+  vtkMRMLApplicationLogic.cxx
   vtkMRMLModelHierarchyLogic.cxx
   vtkMRMLSliceLayerLogic.cxx
   vtkMRMLSliceLogic.cxx
